# lorekeeper-poc

./: .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  requirements.txt
.claude/docs/: chunking&embedding.md  chunking-embedding-production-decisions.md  indexing-experiment-record.md  indexing-function-spec.md  kg-extraction-pipeline.md  kg-verification-ch1-6.md  neo4j-graphrag-directory-structure.md  neo4j-graphrag-python.md  neo4j-graphrag-search-research.md  querying-function-spec.md  references.md  schema-augmentation-candidates.md  schema-components.md  setup-and-run-guide.md
.claude/plan/: context-growth-mitigation-plan.md  (+16 more)
naive_indexing/: graphrag_runner.py  main.py  neo4j_loader.py  validation_generator.py  validator.py
neo4j-python-driver/: .dockerignore  .gitignore  .pre-commit-config.yaml  .semgrepignore  CHANGELOG.md  CONTRIBUTING.md  TESTING.md  pyproject.toml  tox.ini
neo4j-python-driver/benchmarks/: Dockerfile  README.md  pyproject.toml
neo4j-python-driver/benchmarks/src/bench/: __main__.py
neo4j-python-driver/benchmarks/src/bench/workloads/: __init__.py  _data_bytes.py  _data_dictionary.py  _data_float.py  _data_vector.py  api_execute_query.py  api_managed_transaction.py  api_session_run.py  api_unmanaged_transaction.py  chunking.py  cold_driver.py  deserialize_boolean.py  deserialize_bytes.py  deserialize_dictionary.py  deserialize_float.py  deserialize_integer.py  deserialize_list.py  deserialize_node.py  deserialize_null.py  deserialize_path.py  deserialize_relationship.py  deserialize_string.py  deserialize_vector.py  home_db_resolution.py  record_streaming.py  serialize_boolean.py  serialize_bytes.py  serialize_dictionary.py  serialize_float.py  serialize_integer.py  serialize_list.py  serialize_null.py  serialize_string.py  serialize_vector.py
neo4j-python-driver/benchmarks/src/bench/workloads/util/: __init__.py  _bencher.py  _benchmark_context.py  _benchmark_registry.py  _deserialization_template.py  _timer.py  const.py
poc/: main.py  pyproject.toml
poc/data/: input.txt  input_ch1.txt  input_ch2.txt  input_ch3.txt  input_ch4.txt  input_ch5.txt  input_ch6.txt
poc/output/: comparison_1_existing_vs_new.md  comparison_2_medium_vs_high.md  comparison_3_enriched_prompt.md  comparison_4_reverted.md  comparison_luna_medium_vs_high.md  luna_high.md  luna_high_run2.md  luna_high_run3.md  luna_high_run4.md  luna_medium.md  luna_medium_run2.md  luna_medium_run3.md  luna_medium_run4.md  report.md  rolling_summary.md  splitter_demo.md  v_baseline.metrics.json  v_kiwi.metrics.json  v_kss.metrics.json  v_kss_fuzzy.metrics.json  v_recursive.metrics.json  v_resolver_embed.metrics.json  v_resolver_fuzzy.metrics.json
poc/src/: __init__.py  chunks.py  client.py  context.py  evidence.py  extraction_examples.py  extractor.py  index_episode.py  indexing.py  indexing_eval.py  pipeline.py  resolver.py  retrieval.py  schema.py  seed_example.py  smoke.py  splitter_demo.py  splitters.py
(+172 files in other folders)
