# Copyright (c) "Neo4j"
# Neo4j Sweden AB [https://neo4j.com]
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "bench"
description = "Benchmark Runner for Neo4j Bolt driver for Python"
version = "0.0.0"
authors = [
    {name = "Neo4j, Inc.", email = "drivers@neo4j.com"},
]
dependencies = [
    "neo4j @ file:///${PROJECT_ROOT}/..",
]
requires-python = "== 3.13.9"

[build-system]
requires = [
    "setuptools == 82.0.1",
]
build-backend = "setuptools.build_meta"

[tool.uv]
reinstall-package = ["neo4j"]

[tool.ruff]
extend = "../pyproject.toml"

[tool.ty.environment]
extra-paths = ["../src"]
